# bunch-of-code

./: LICENSE  README.md
c/: 2048_gl.c  README.md  distance.c  found_myself.c  matrix_rain.c
c++/: README.md  bcd.cpp  kvc_calc.cpp
c++/framebuffer-gui-demo/: Makefile
c++/particles/: .clang-format  CMakeLists.txt
c++/particles/assets/: base_fragment.glsl  fragment.glsl  point_fragment.glsl  point_vertex.glsl  text_vertex.glsl
c++/particles/src/: error.cpp  error.hpp  font.cpp  font.hpp  main.cpp  points.cpp  points.hpp  shader.cpp  shader.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
c/calc/: Makefile  calc.c  calc.h  stack.c  stack.h
c/decoders/: Makefile  a1z26.c  atbash.c  binary.c  caesar.c  vigenere.c
haskell/: README.md  encode.hs  words.hs
other/: README.md
other/find-a-cat/: Makefile  cat_in_sha.py  find_a_cat_v1.cpp  find_a_cat_v2.cpp  prove_sha.py  prove_xorshift.cpp  xorshift.hpp
python/: README.md  abstract-wallpaper.py  bezier.py  birch.py  djvu_split.py  four_fours_problem.py  gixie_backlight.py  grid.py  hex_picture.py  img_resize.py  joycrop.py  main_colors.py  morse.py  npieces.py  passwordbox.py  progress_bar.py  pycolor.py  pyproject.toml  shape.py  similarity.py  timelapse.py  transition.py  ugly-code-generator.py  wav_to_freq.py
python/censor/: censor_it.py
python/family/: family_generator.py  name_rus.txt
rust/: README.md  distance.rs  fib_measure.rs  fib_sequence.rs  pgen.rs  serialize.rs  tokenizer.rs  xor-shift.rs  xoshiro256ss.rs
scripts/: README.md  mkv2gif.sh  pdf_shakalator.sh  recode.sh  watch_youtube.sh
(+50 files in other folders)
